# the-message-boards

./: Cargo.toml  index.html
src/: lib.rs  main.rs
src/components/: App.rs  Message.rs  MessageInput.rs  Messages.rs  mod.rs
src/services/: MessageService.rs  mod.rs
test-app/: Cargo.toml  index.html
