[package]
name = "the-message-board"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
reqwest = "0.11.12"
wasm-bindgen = "0.2.83"
web-sys = "0.3.60"
wasm-logger = "0.2.0"
log = "0.4.6"
serde = "1.0.147"
serde_json = "1.0.87"
anyhow = "1.0.66"